src/test/resources/tests/typeError/booleanExpressions.qg

init {
    true && 1
    2 || false
    !treeMap(:number, :number)
}

run true

input(a,b) true